# telegram_repost_bot

./: .gitignore  README.md  env.example  pyproject.toml
telegram_repost_bot/: check_health_script.py  config_reader.py  logging_config.py  main.py  utils.py  wp_api.py
telegram_repost_bot/utils/: message_service.py  utils.py
tests/: test_parse_post.py
