[tool.poetry]
name = "telegram-repost-bot"
version = "0.1.0"
description = ""
authors = ["Karim Kabirov <karim3487@gmail.com>"]
readme = "README.md"
include = ["README.md", "telegram_repost_bot/**", "telegram_sessions/**", "tests", ".env"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = { version = "1.10.14", extras = ["email"] }
python-dotenv = "^1.0.1"
requests = "^2.31.0"
emoji = "^2.11.0"
telethon = "^1.36.0"
flask = "^3.0.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.2"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

